tests/NormalTests/paczka1/fuzzy1/29485647.err
Error in line 5: g1qhJmn S19 1,42
Error in line 6: g1qhJmn S19 1,9
Error in line 4: gHqSH S571 29,2
Error in line 16: 5opCX13 A20 6,9
Error in line 18: nu9aAOjO A20 15,6
Error in line 26: q0a A717 76,05
Error in line 12: qB1qqKFViwr S571 20,9
Error in line 14: q0a A717 59,8
Error in line 29: g1qhJmn A20 360,8
